# UmaAna

./: .gitignore  .gitmodules  .python-version  README.md  app.py  cjedb.json  config.cfg  pyproject.toml
static/: client.js
templates/: index.html
