[tool.poetry]
name = "umaana"
version = "0.1.0"
description = ""
authors = ["niwanowa <40478818+niwanowa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
protobuf = "^4.24.4"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
msgpack = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
